Fix navbar z-index
Se arregló un problema de la barra de navegación detectado por @diegoaach .

Cambios en:

- _nav.scss: Se cambió el z-index de la barra de navegación a 100 (El máximo entre todos los elementos de la página).

- main.scss: Se cambió el atributo position de sticky a fixed en el body cuando se abre la barra de navegación en mobile, esto para evitar el scroll vertical.

--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -50,7 +50,8 @@ main{
 
 /*Clase para fijar el body cuando se abre el menú en mobile*/
 .body--fixed{
-    position: sticky; 
+    top: 68px; /*Valor calculado a partir de los márgenes y padding existentes*/
+    position: fixed; 
 }
 
 @import './mediaQueries'; 
